This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: ElementTree.ParseError - needs documentation and consistent C&Py implementations
Type: Stage: resolved
Components: Extension Modules, Library (Lib) Versions: Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: effbot, eli.bendersky, flox, python-dev, scoder
Priority: normal Keywords:

Created on 2012-03-06 05:05 by eli.bendersky, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (2)
msg154999 - (view) Author: Eli Bendersky (eli.bendersky) * (Python committer) Date: 2012-03-06 05:05
Following issue #14178:


The ElementTree.ParseError is not documented and its behavior seems to differ between the C and Python implementations. In particular, the C module doesn't assign the 'code' attribute when raising a ParseError.
msg155995 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-03-16 06:21
New changeset b76fa310e73d by Eli Bendersky in branch 'default':
Issue #14207: the ParseError exception raised by _elementtree was made
http://hg.python.org/cpython/rev/b76fa310e73d
History
Date User Action Args
2022-04-11 14:57:27adminsetgithub: 58415
2012-03-16 06:22:19eli.benderskysetstatus: open -> closed
resolution: fixed
stage: needs patch -> resolved
2012-03-16 06:21:50python-devsetnosy: + python-dev
messages: + msg155995
2012-03-06 05:05:33eli.benderskycreate