Issue #14207: the ParseError exception raised by _elementtree was made consistent to the one raised by the Python module (the 'code' attribute was added).

In addition, the exception is now documented.

Added a test to check that ParseError has the required attributes, and
threw away the equivalent doctest which is no longer required.